@@ -648,6 +648,15 @@ CAMERA_SMART_CYCLESPEED 20.0            # typical cycle speed
 CAMERA_SMART_DISTANCESCALE .2           # distance scale measured relative to cycle speed
 CAMERA_SMART_MIN_DISTANCESCALE 5.0      # minimal distance scale in meters
 
+# red/green 3D rendering settings
+# you need red/green or red/cyan 3D glasses to see anything meaningful if you use these
+CAMERA_EYE_DISTANCE 0                   # The distance between the two eyes of the camera. Meaninful values lie between 0.1 and 0.5
+CAMERA_EYE_1_COLOR 1                   # The color mask of the first eye of the camera. 1 is red, 2 is green, 4 is blue, any sum of these values means more than one color
+CAMERA_EYE_1_COLOR 6                   # The color mask of the second eye of the camera
+#CAMERA_EYE_1_COLOR 2                  # for red/green glasses
+CAMERA_IN_MAX_FOCUS_DISTANCE .5        # This, multiplied by the current speed, determines the maximum distance of the focus of the two eyes unless a wall is closer
+
+
 # server browser query settings
 
 BROWSER_QUERY_FILTER         1     # query filter. Set to 0 to poll all servers, 1 to query servers with nonnegative score bias, 2 to query only those with positive bias and 3 to not query at all. Non-queried servers will appear to have ping 999; the player info comes indirectly from the master server.
